--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "next": "14.0.3",
     "react": "^18",
