--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3"
   },
