--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/node": "^20",
